Error del tiempo solucionado. Faltan premios, caida de anuncios en unlock

--- a/src/swingtournamentvisor/bundles/Bundle_en_EN.properties
+++ b/src/swingtournamentvisor/bundles/Bundle_en_EN.properties
@@ -95,3 +95,13 @@ Desktop.livePlayers.text=0
 Desktop.playersLabel.text=Players
 Desktop.nextLevelLabel.text=Next Level
 Desktop.chipsAverageLabel.text=Chips Average
+Desktop1080.rebuys.AccessibleContext.accessibleName=0
+Desktop1080.played.AccessibleContext.accessibleName=0
+Desktop1080.rebuys.text=0
+Desktop1080.breakIn.AccessibleContext.accessibleName=
+Desktop1080.anteLabel.AccessibleContext.accessibleName=Ante
+Desktop1080.anteLabel.text=ANTE
+Desktop1080.subName.AccessibleContext.accessibleName=
+Desktop1080.subName.text=
+Desktop1080.time.AccessibleContext.accessibleName=
+Desktop1080.time.text=00:00
